# AI_Updates

./: .gitignore  README.md  get_chat_id.py  hello.py  main.py  notifier.py  playwright_scraper.py  pyproject.toml  requirements.txt  scraper.py  test_notification.py
.github/workflows/: daily_scrape.yml
