[project]
name = "scrape-project"
version = "0.1.0"
description = "Engineering blog scraper with Telegram notifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "playwright>=1.49.0",
]
